fix: add data organizer
